src/test/resources/semantic/reject/wrongReturnType.ul
void main() {
}

int foo() {
    return "string";
}
